--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
   "author": "Siddhant",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "fast-two-sms": "^3.0.0",
     "formidable": "^2.0.1",
     "imagekit": "^4.1.1",
     "mongoose": "^6.7.1",
+    "node-fetch": "^2.6.7",
+    "nodemailer": "^6.8.0",
+    "nodemailer-express-handlebars": "^6.0.0",
+    "random-avatar": "^1.0.1",
+    "random-avatar-generator": "^2.0.0",
     "socket.io": "^4.5.3",
+    "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0"
   }
 }
