--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Gamynt Web and App Backend",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Siddhant",
